Add M400s to resolve sensorless homing error in issue #66, add comments, formatting changes

--- a/macros/TEST_SPEED_DELTA.cfg
+++ b/macros/TEST_SPEED_DELTA.cfg
@@ -41,6 +41,7 @@ gcode:
     { action_respond_info("TEST_SPEED_DELTA: starting %d iterations at speed %d, accel %d" % (iterations, speed, accel)) }
     
     # Home and get position for comparison later:
+    M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
     G28
     G90
     G4 P1000 
@@ -53,42 +54,41 @@ gcode:
     SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
 
     {% for i in range(iterations) %}
-        # Large pattern
-            # Diagonals
-            G0 X{x_min} Y{y_min} F{speed*60}
-            G0 X{x_max} Y{y_max} F{speed*60}
-            G0 X{x_min} Y{y_min} F{speed*60}
-            G0 X{x_max} Y{y_min} F{speed*60}
-            G0 X{x_min} Y{y_max} F{speed*60}
-            G0 X{x_max} Y{y_min} F{speed*60}
-            
-            # Box
-            G0 X{x_min} Y{y_min} F{speed*60}
-            G0 X{x_min} Y{y_max} F{speed*60}
-            G0 X{x_max} Y{y_max} F{speed*60}
-            G0 X{x_max} Y{y_min} F{speed*60}
+        # Large pattern diagonals
+        G0 X{x_min} Y{y_min} F{speed*60}
+        G0 X{x_max} Y{y_max} F{speed*60}
+        G0 X{x_min} Y{y_min} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
+        G0 X{x_min} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
         
-        # Small pattern
-            # Small diagonals 
-            G0 X{x_center_min} Y{y_center_min} F{speed*60}
-            G0 X{x_center_max} Y{y_center_max} F{speed*60}
-            G0 X{x_center_min} Y{y_center_min} F{speed*60}
-            G0 X{x_center_max} Y{y_center_min} F{speed*60}
-            G0 X{x_center_min} Y{y_center_max} F{speed*60}
-            G0 X{x_center_max} Y{y_center_min} F{speed*60}
-            
-            # Small box
-            G0 X{x_center_min} Y{y_center_min} F{speed*60}
-            G0 X{x_center_min} Y{y_center_max} F{speed*60}
-            G0 X{x_center_max} Y{y_center_max} F{speed*60}
-            G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        # Large pattern box
+        G0 X{x_min} Y{y_min} F{speed*60}
+        G0 X{x_min} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
+    
+        # Small pattern diagonals 
+        G0 X{x_center_min} Y{y_center_min} F{speed*60}
+        G0 X{x_center_max} Y{y_center_max} F{speed*60}
+        G0 X{x_center_min} Y{y_center_min} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        G0 X{x_center_min} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        
+        # Small pattern box
+        G0 X{x_center_min} Y{y_center_min} F{speed*60}
+        G0 X{x_center_min} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
     {% endfor %}
 
     # Restore max speed/accel/accel_to_decel to their configured values
     SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
 
     # Re-home and get position again for comparison:
-    G28
+    M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
+    G28 # This is a full G28 to fix an issue with CoreXZ - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/12
     G4 P1000 
     GET_POSITION
 
