Fix typo in G-code
Fixed an accidentally misplaced G0 movement in both the large and small box pattern

--- a/macros/TEST_SPEED.cfg
+++ b/macros/TEST_SPEED.cfg
@@ -90,9 +90,9 @@ gcode:
         G0 X{x_max} Y{y_max} F{speed*60}
         G0 X{x_min} Y{y_max} F{speed*60}
         G0 X{x_max} Y{y_max} F{speed*60}
-        G0 X{x_max} Y{y_max} F{speed*60}
         G0 X{x_max} Y{y_min} F{speed*60}
         G0 X{x_max} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
 
         # Small diagonals 
         G0 X{x_center_min} Y{y_center_min} F{speed*60}
@@ -114,9 +114,9 @@ gcode:
         G0 X{x_center_max} Y{y_center_max} F{speed*60}
         G0 X{x_center_min} Y{y_center_max} F{speed*60}
         G0 X{x_center_max} Y{y_center_max} F{speed*60}
-        G0 X{x_center_max} Y{y_center_max} F{speed*60}
         G0 X{x_center_max} Y{y_center_min} F{speed*60}
         G0 X{x_center_max} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
     {% endfor %}
 
     # Restore max speed/accel/accel_to_decel to their configured values
