--- a/macros/TEST_SPEED.cfg
+++ b/macros/TEST_SPEED.cfg
@@ -1,9 +1,9 @@
+[gcode_macro TEST_SPEED]
 # Home, get position, throw around toolhead, home again.
 # If MCU stepper positions (first line in GET_POSITION) are greater than a full step different (your number of microsteps), then skipping occured.
 # We only measure to a full step to accomodate for endstop variance.
 # Example: TEST_SPEED SPEED=300 ACCEL=5000 ITERATIONS=10
 
-[gcode_macro TEST_SPEED]
 gcode:
     # Speed
     {% set speed  = params.SPEED|default(printer.configfile.settings.printer.max_velocity)|int %}
@@ -11,6 +11,8 @@ gcode:
     {% set iterations = params.ITERATIONS|default(5)|int %}
     # Acceleration
     {% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
+    # Minimum Cruise Ratio
+    #{% set min_cruise_ratio = params.MIN_CRUISE_RATIO|default(printer.configfile.settings.printer.minimum_cruise_ratio)|float %}
     # Bounding inset for large pattern (helps prevent slamming the toolhead into the sides after small skips, and helps to account for machines with imperfectly set dimensions)
     {% set bound = params.BOUND|default(20)|int %}
     # Size for small pattern box
@@ -41,7 +43,6 @@ gcode:
     { action_respond_info("TEST_SPEED: starting %d iterations at speed %d, accel %d" % (iterations, speed, accel)) }
     
     # Home and get position for comparison later:
-        M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
         G28
         # QGL if not already QGLd (only if QGL section exists in config)
         {% if printer.configfile.settings.quad_gantry_level %}
@@ -53,7 +54,6 @@ gcode:
         # Move 50mm away from max position and home again (to help with hall effect endstop accuracy - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/24)
         G90
         G1 X{printer.toolhead.axis_maximum.x-50} Y{printer.toolhead.axis_maximum.y-50} F{30*60}
-        M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
         G28 X Y
         G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
         G4 P1000 
@@ -63,44 +63,45 @@ gcode:
     G0 X{x_min} Y{y_min} Z{bound + 10} F{speed*60}
 
     # Set new limits
-    SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} MIN_CRUISE_RATIO={0.5} #OLD: ACCEL_TO_DECEL={accel / 2}
+    SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} #MIN_CRUISE_RATIO = {0.5} #ACCEL_TO_DECEL={accel / 2}
 
     {% for i in range(iterations) %}
-        # Large pattern diagonals
-        G0 X{x_min} Y{y_min} F{speed*60}
-        G0 X{x_max} Y{y_max} F{speed*60}
-        G0 X{x_min} Y{y_min} F{speed*60}
-        G0 X{x_max} Y{y_min} F{speed*60}
-        G0 X{x_min} Y{y_max} F{speed*60}
-        G0 X{x_max} Y{y_min} F{speed*60}
+        # Large pattern
+            # Diagonals
+            G0 X{x_min} Y{y_min} F{speed*60}
+            G0 X{x_max} Y{y_max} F{speed*60}
+            G0 X{x_min} Y{y_min} F{speed*60}
+            G0 X{x_max} Y{y_min} F{speed*60}
+            G0 X{x_min} Y{y_max} F{speed*60}
+            G0 X{x_max} Y{y_min} F{speed*60}
+            
+            # Box
+            G0 X{x_min} Y{y_min} F{speed*60}
+            G0 X{x_min} Y{y_max} F{speed*60}
+            G0 X{x_max} Y{y_max} F{speed*60}
+            G0 X{x_max} Y{y_min} F{speed*60}
         
-        # Large pattern box
-        G0 X{x_min} Y{y_min} F{speed*60}
-        G0 X{x_min} Y{y_max} F{speed*60}
-        G0 X{x_max} Y{y_max} F{speed*60}
-        G0 X{x_max} Y{y_min} F{speed*60}
-    
-        # Small pattern diagonals
-        G0 X{x_center_min} Y{y_center_min} F{speed*60}
-        G0 X{x_center_max} Y{y_center_max} F{speed*60}
-        G0 X{x_center_min} Y{y_center_min} F{speed*60}
-        G0 X{x_center_max} Y{y_center_min} F{speed*60}
-        G0 X{x_center_min} Y{y_center_max} F{speed*60}
-        G0 X{x_center_max} Y{y_center_min} F{speed*60}
-        
-        # Small patternbox
-        G0 X{x_center_min} Y{y_center_min} F{speed*60}
-        G0 X{x_center_min} Y{y_center_max} F{speed*60}
-        G0 X{x_center_max} Y{y_center_max} F{speed*60}
-        G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        # Small pattern
+            # Small diagonals 
+            G0 X{x_center_min} Y{y_center_min} F{speed*60}
+            G0 X{x_center_max} Y{y_center_max} F{speed*60}
+            G0 X{x_center_min} Y{y_center_min} F{speed*60}
+            G0 X{x_center_max} Y{y_center_min} F{speed*60}
+            G0 X{x_center_min} Y{y_center_max} F{speed*60}
+            G0 X{x_center_max} Y{y_center_min} F{speed*60}
+            
+            # Small box
+            G0 X{x_center_min} Y{y_center_min} F{speed*60}
+            G0 X{x_center_min} Y{y_center_max} F{speed*60}
+            G0 X{x_center_max} Y{y_center_max} F{speed*60}
+            G0 X{x_center_max} Y{y_center_min} F{speed*60}
     {% endfor %}
 
     # Restore max speed/accel/accel_to_decel to their configured values
-    SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} #ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
+    SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} #MIN_CRUISE_RATIO={printer.configfile.settings.printer.minimum_cruise_ratio} #ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
 
     # Re-home and get position again for comparison:
-        M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
-        G28 # This is a full G28 to fix an issue with CoreXZ - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/12
+        G28
         # Go to XY home positions (in case your homing override leaves it elsewhere)
         G90
         G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
@@ -109,3 +110,4 @@ gcode:
 
     # Restore previous gcode state (absolute/relative, etc)
     RESTORE_GCODE_STATE NAME=TEST_SPEED
+    
