--- a/macros/TEST_SPEED.cfg
+++ b/macros/TEST_SPEED.cfg
@@ -4,6 +4,8 @@
 # We only measure to a full step to accomodate for endstop variance.
 # Example: TEST_SPEED SPEED=300 ACCEL=5000 ITERATIONS=10
 
+description: Test for max speed and acceleration parameters for the printer. Procedure: Home -> ReadPositionFromMCU -> MovesToolhead@Vel&Accel -> Home -> ReadPositionfromMCU
+
 gcode:
     # Speed
     {% set speed  = params.SPEED|default(printer.configfile.settings.printer.max_velocity)|int %}
@@ -12,7 +14,7 @@ gcode:
     # Acceleration
     {% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
     # Minimum Cruise Ratio
-    #{% set min_cruise_ratio = params.MIN_CRUISE_RATIO|default(printer.configfile.settings.printer.minimum_cruise_ratio)|float %}
+    {% set min_cruise_ratio = params.MIN_CRUISE_RATIO|default(0)|float %} # Possible location in printer object stack: printer.configfile.settings.printer.minimum_cruise_ratio
     # Bounding inset for large pattern (helps prevent slamming the toolhead into the sides after small skips, and helps to account for machines with imperfectly set dimensions)
     {% set bound = params.BOUND|default(20)|int %}
     # Size for small pattern box
@@ -43,6 +45,7 @@ gcode:
     { action_respond_info("TEST_SPEED: starting %d iterations at speed %d, accel %d" % (iterations, speed, accel)) }
     
     # Home and get position for comparison later:
+        M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
         G28
         # QGL if not already QGLd (only if QGL section exists in config)
         {% if printer.configfile.settings.quad_gantry_level %}
@@ -54,6 +57,7 @@ gcode:
         # Move 50mm away from max position and home again (to help with hall effect endstop accuracy - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/24)
         G90
         G1 X{printer.toolhead.axis_maximum.x-50} Y{printer.toolhead.axis_maximum.y-50} F{30*60}
+        M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
         G28 X Y
         G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
         G4 P1000 
@@ -63,45 +67,46 @@ gcode:
     G0 X{x_min} Y{y_min} Z{bound + 10} F{speed*60}
 
     # Set new limits
-    SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} #MIN_CRUISE_RATIO = {0.5} #ACCEL_TO_DECEL={accel / 2}
+    # SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2} # DEPRECATED | Due to deprecation of accel_to_decel parameter in Klipper
+    SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} MIN_CRUISE_RATIO={minCruiseRatio}
 
     {% for i in range(iterations) %}
-        # Large pattern
-            # Diagonals
-            G0 X{x_min} Y{y_min} F{speed*60}
-            G0 X{x_max} Y{y_max} F{speed*60}
-            G0 X{x_min} Y{y_min} F{speed*60}
-            G0 X{x_max} Y{y_min} F{speed*60}
-            G0 X{x_min} Y{y_max} F{speed*60}
-            G0 X{x_max} Y{y_min} F{speed*60}
-            
-            # Box
-            G0 X{x_min} Y{y_min} F{speed*60}
-            G0 X{x_min} Y{y_max} F{speed*60}
-            G0 X{x_max} Y{y_max} F{speed*60}
-            G0 X{x_max} Y{y_min} F{speed*60}
+        # Large pattern diagonals
+        G0 X{x_min} Y{y_min} F{speed*60}
+        G0 X{x_max} Y{y_max} F{speed*60}
+        G0 X{x_min} Y{y_min} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
+        G0 X{x_min} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
         
-        # Small pattern
-            # Small diagonals 
-            G0 X{x_center_min} Y{y_center_min} F{speed*60}
-            G0 X{x_center_max} Y{y_center_max} F{speed*60}
-            G0 X{x_center_min} Y{y_center_min} F{speed*60}
-            G0 X{x_center_max} Y{y_center_min} F{speed*60}
-            G0 X{x_center_min} Y{y_center_max} F{speed*60}
-            G0 X{x_center_max} Y{y_center_min} F{speed*60}
-            
-            # Small box
-            G0 X{x_center_min} Y{y_center_min} F{speed*60}
-            G0 X{x_center_min} Y{y_center_max} F{speed*60}
-            G0 X{x_center_max} Y{y_center_max} F{speed*60}
-            G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        # Large pattern box
+        G0 X{x_min} Y{y_min} F{speed*60}
+        G0 X{x_min} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_max} F{speed*60}
+        G0 X{x_max} Y{y_min} F{speed*60}
+    
+        # Small pattern diagonals
+        G0 X{x_center_min} Y{y_center_min} F{speed*60}
+        G0 X{x_center_max} Y{y_center_max} F{speed*60}
+        G0 X{x_center_min} Y{y_center_min} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        G0 X{x_center_min} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
+        
+        # Small patternbox
+        G0 X{x_center_min} Y{y_center_min} F{speed*60}
+        G0 X{x_center_min} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_max} F{speed*60}
+        G0 X{x_center_max} Y{y_center_min} F{speed*60}
     {% endfor %}
 
     # Restore max speed/accel/accel_to_decel to their configured values
-    SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} #MIN_CRUISE_RATIO={printer.configfile.settings.printer.minimum_cruise_ratio} #ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
+    #SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} # DEPRECATED | Depercating of accel_to_decel param in klipper
+    SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} MIN_CRUISE_RATIO={printer.configfile.settings.printer.minimum_cruise_ratio} 
 
     # Re-home and get position again for comparison:
-        G28
+        M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
+        G28 # This is a full G28 to fix an issue with CoreXZ - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/12
         # Go to XY home positions (in case your homing override leaves it elsewhere)
         G90
         G0 X{printer.toolhead.axis_maximum.x-1} Y{printer.toolhead.axis_maximum.y-1} F{30*60}
