--- a/macros/TEST_SPEED_DELTA.cfg
+++ b/macros/TEST_SPEED_DELTA.cfg
@@ -1,11 +1,11 @@
-# This variant is for delta printers.
-
+[gcode_macro TEST_SPEED_DELTA]
 # Home, get position, throw around toolhead, home again.
 # If MCU stepper positions (first line in GET_POSITION) are greater than a full step different (your number of microsteps), then skipping occured.
 # We only measure to a full step to accomodate for endstop variance.
 # Example: TEST_SPEED_DELTA SPEED=300 ACCEL=5000 ITERATIONS=10
 
-[gcode_macro TEST_SPEED_DELTA]
+description: Test for max speed and acceleration parameters for the printer. Procedure: Home -> ReadPositionFromMCU -> MovesToolhead@Vel&Accel -> Home -> ReadPositionfromMCU
+
 gcode:
     # Speed
     {% set speed  = params.SPEED|default(printer.configfile.settings.printer.max_velocity)|int %}
@@ -13,6 +13,8 @@ gcode:
     {% set iterations = params.ITERATIONS|default(5)|int %}
     # Acceleration
     {% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
+    # Minimum Cruise Ratio
+    {% set min_cruise_ratio = params.MIN_CRUISE_RATIO|default(0.5)|float %}
     # Bounding inset for large pattern (helps prevent slamming the toolhead into the sides after small skips, and helps to account for machines with imperfectly set dimensions)
     {% set bound = params.BOUND|default(20)|int %}
     # Size for small pattern box
@@ -51,7 +53,11 @@ gcode:
     G0 X{x_min} Y{y_min} Z{printer.toolhead.axis_maximum.z/2} F{speed*60}
 
     # Set new limits
-    SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
+    {% if printer.configfile.settings.printer.minimum_cruise_ratio is defined %}
+        SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} MINIMUM_CRUISE_RATIO={min_cruise_ratio}
+    {% else %}
+        SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
+    {% endif %}
 
     {% for i in range(iterations) %}
         # Large pattern diagonals
@@ -84,8 +90,11 @@ gcode:
     {% endfor %}
 
     # Restore max speed/accel/accel_to_decel to their configured values
-    SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel} 
-
+    {% if printer.configfile.settings.printer.minimum_cruise_ratio is defined %}
+        SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} MINIMUM_CRUISE_RATIO={printer.configfile.settings.printer.minimum_cruise_ratio} 
+    {% else %}
+        SET_VELOCITY_LIMIT VELOCITY={printer.configfile.settings.printer.max_velocity} ACCEL={printer.configfile.settings.printer.max_accel} ACCEL_TO_DECEL={printer.configfile.settings.printer.max_accel_to_decel}
+    {% endif %}
     # Re-home and get position again for comparison:
     M400 # Finish moves - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/66
     G28 # This is a full G28 to fix an issue with CoreXZ - https://github.com/AndrewEllis93/Print-Tuning-Guide/issues/12
@@ -94,3 +103,4 @@ gcode:
 
     # Restore previous gcode state (absolute/relative, etc)
     RESTORE_GCODE_STATE NAME=TEST_SPEED_DELTA
+    
